[package]
name = "silent-batched-threshold-encryption"
version = "0.1.0"
edition = "2021"

[dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
ark-std = { version = "0.5.0", features = ["print-trace"] }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-poly = { version = "0.5.0" }
ark-bls12-381 = { version = "0.5.0" }
ark-serialize = { version = "0.5.0" }
rand = { version = "0.9.1" }
serde = { version = "1.0.130" }
rayon = { version = "1.5.1" }
bincode = { version = "1.3" }

hopcroft-karp = { git = "https://github.com/microgravitas/hopcroft-karp" }

sha2 = { version = "0.10.5" }

[features]
asm = ["ark-ff/asm"]

[profile.dev]
opt-level = 3

[[bench]]
name = "encryption"
harness = false

[[bench]]
name = "beatmev_pd"
harness = false

[[bench]]
name = "sbte_pd"
harness = false


[[bench]]
name = "bte_pd"
harness = false

# [[bench]]
# name = "decryption"
# harness = false

# [[bench]]
# name = "interpolation"
# harness = false

# [[bench]]
# name = "setup"
# harness = false

# [[bench]]
# name = "batch_eval"
# harness = false
